--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "version": "0.1.0",
   "author": "Rafael Bicalho <rbmbika@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "bootstrap": "^4.6.0",
     "gatsby": "^2.31.1",
     "gatsby-image": "^2.10.0",
