--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {
     "prettier": "2.2.1"
